# consumer

./: CMakeLists.txt  README.md
src/: image_processor.hpp  main.cpp  shared_memory.hpp
